Add font-display: swap for better page speed

--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -1,8 +1,10 @@
 @font-face {
-    font-family: 'Noto';
+    font-family: "Noto", sans-serif;
+    font-display: swap;
     src: url('/fonts/NotoSans-Regular.ttf');
 }
 
 html {
-    font-family: 'Noto';
+    font-family: "Noto", sans-serif;
+    font-display: swap;
 }
